ruta del formulario

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,7 @@
 <body>
     <h1>{{titulo}}</h1>
 
-    <form action="/login">
+    <form action="/login" method="POST">
 
         <label for="">Correo</label>
         <input type = "email" placeholder="correo@hotmail.com">
