Login con label

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,9 +13,9 @@
     <form action="/login" method="POST">
 
         <label for="">Correo</label>
-        <input type = "email" placeholder="correo@hotmail.com">
+        <input name= "correo" type = "email" placeholder="correo@hotmail.com" value="correo@hotmail.com">
         <label for="">Contraseña</label>
-        <input type = "password" placeholder="contraseña">
+        <input name="contrasena" type = "password" placeholder="contraseña">
 
         <button>Ingresar</button>
 
